
## [Unreleased]- 

## Added

- Pushing release-candidates to Pypi with ensured transparent versioning using git tags.
- Added cycler and colormath package dependencies
- Proper optional pylatex dependency
- SpecifierStr: Added pass-through kwargs from SpecifierStr.to_label() to SpecifierStr.to_tex()
- MCard: Added op_vars back to MCard and pushed its semver to 2.2. op_vars will be used in DutNgspice
- DutNgspice: Added devices_op_vars to collect all op_vars in a netlist and add them if OpVars is given in the sweep.outputdef
- DutNgspice: Added native support for VA-modeled devices using OpenVAF
- DutView: save_db now allows saving only some sweep_keys in case of separate databases

## Changed

- DutNgspice now uses the verilog-code if a modelcard has one. This breaks the current behaviour. Next release will be 2.0.0
- Updated to pyqtgraph 0.13.1. QApplication in plot.py from QWidgets is tried to use, if this does not work, fall back to old implementation from Qt.QtGui

### Removed

- Removed gitlab.com repository from pipeline.

## [1.7.0] - 2022.08.17

### Added

- Added local and full docker container for DMT-core. It is build in 3 steps
    - Builder: Builds ngspice, adms, trilinos and xyce
    - Base: copys from builder, texlive and installs only necessary runtime and python environment
    - full or Version_XX: Includes the latest or respective DMT install
- dmt example bash script which uses the docker container to run a python/dmt script.
- Generating CycloneDX SBOM from the container
- Added a RuntimeWarning when loading a parameter for a MCard which is out of bounds.
- Added a mdm-reader test case for SkywaterPDK raw measurement data
- Added an example to the docu how to read and handle the SkywaterPDK raw data in a DutLib
- Added McSkywater to simulate Skywater130 PDK models using DutNgspice
- Added an error for non-unique dut names in a DutLib. Names must be unique to generate separate save folders.

### Changed
